[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["venkata sai kumar <VSAIKUMA@volvocars.com>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
pendulum = "^2.1.2"
numpy = "^1.24.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
